[tool.poetry]
name = "aws-bedrock-tutorial"
version = "0.1.0"
description = ""
authors = ["sugarforever <william.1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.10"
langchain = "^0.0.353"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
